--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 <head lang="en">
     <meta charset="UTF-8">
     <title>Rock Paper Scissors</title>
+
+    <link rel="stylesheet" href="styles.css">
+
     <script src="http://code.createjs.com/createjs-2013.12.12.min.js"></script>
     <script src="src/assetsManifest.js"></script>
     <script src="src/Game.js"></script>
@@ -10,7 +13,7 @@
 
     <script>
         function initGame(){
-            var stage = new createjs.Stage('rps');
+            var stage = new createjs.Stage('rpsCanvas');
 
             rps.assets.addEventListener('complete', function(){
                 new rps.Game(stage);
@@ -19,6 +22,8 @@
     </script>
 </head>
 <body onload="initGame()">
-    <canvas id="rps" width="800" height="400"></canvas>
+    <div id="rps">
+        <canvas id="rpsCanvas" width="800" height="400"></canvas>
+    </div>
 </body>
 </html>
