Added CSS/HTML for top bar with bets/balance view
Only HTML & CSS, no logic yet

--- a/index.html
+++ b/index.html
@@ -23,6 +23,18 @@
 </head>
 <body onload="initGame()">
     <div id="rps">
+        <div class="topBar">
+            <div class="bets">
+                <label>Bets</label>
+                <div class="field">0.00</div>
+                <div class="up control"></div>
+                <div class="down control disabled"></div>
+            </div>
+            <div class="balance">
+                <label>Balance</label>
+                <div class="field">0.00</div>
+            </div>
+        </div>
         <canvas id="rpsCanvas" width="800" height="400"></canvas>
     </div>
 </body>
