Added GameStartView on canvas
View shows a selection of moves (rock, paper, scissors).

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <script src="src/assetsManifest.js"></script>
     <script src="src/Game.js"></script>
     <script src="src/HandView.js"></script>
+    <script src="src/GameStartView.js"></script>
 
     <script>
         function initGame(){
