Canvas centered and scaling to fit

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     </script>
 </head>
 <body onload="initGame()">
-    <div id="rps">
+    <div id="rps" align="center">
         <div class="topBar">
             <div class="bets">
                 <label>Bets</label>
