Renamed assetsManifest -> assets
More uniform name

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <script src="http://code.createjs.com/createjs-2013.12.12.min.js"></script>
     <script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
 
-    <script src="src/assetsManifest.js"></script>
+    <script src="src/assets.js"></script>
     <script src="src/Game.js"></script>
     <script src="src/HandView.js"></script>
     <script src="src/GameStartView.js"></script>
