--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 
     <script src="src/assets.js"></script>
     <script src="src/Game.js"></script>
+    <script src="src/GameModel.js"></script>
     <script src="src/HandView.js"></script>
     <script src="src/GameStartView.js"></script>
 
