--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <script src="src/GameModel.js"></script>
     <script src="src/HandView.js"></script>
     <script src="src/GameStartView.js"></script>
+    <script src="src/GameRevealView.js"></script>
 
     <script>
         function initGame(){
