--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <script src="src/assets.js"></script>
     <script src="src/Game.js"></script>
     <script src="src/GameModel.js"></script>
+    <script src="src/TopBarView.js"></script>
     <script src="src/HandView.js"></script>
     <script src="src/GameStartView.js"></script>
     <script src="src/GameRevealView.js"></script>
@@ -43,7 +44,7 @@
                 <label>Bets</label>
                 <div class="field">0.00</div>
                 <div class="up control"></div>
-                <div class="down control disabled"></div>
+                <div class="down control"></div>
             </div>
             <div class="balance">
                 <label>Balance</label>
