Renamed TopBarView & HandView
Now TopBar and HandView. The View word should be reserved for the main
views, not just components.

--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     <script src="src/assets.js"></script>
     <script src="src/Game.js"></script>
     <script src="src/GameModel.js"></script>
-    <script src="src/TopBarView.js"></script>
-    <script src="src/HandView.js"></script>
+    <script src="src/TopBar.js"></script>
+    <script src="src/Hand.js"></script>
     <script src="src/GameStartView.js"></script>
     <script src="src/GameRevealView.js"></script>
 
