Disable zooming on mobile devices

--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html>
 <head lang="en">
     <meta charset="UTF-8">
+    <meta name="viewport" content="maximum-scale=1"> <!-- Disable Zoom -->
+
     <title>Rock Paper Scissors</title>
 
     <link rel="stylesheet" href="styles.css">
